fixed region heading truncation issue, adjusted dropdown heading styles

--- a/public/styles.css
+++ b/public/styles.css
@@ -1036,10 +1036,17 @@ input[type="radio"] {
 .dropdown-menu .label-container {
     position: relative;
     border: solid 1px var(--lightAccent);
-    width: calc(280px + 0.3rem);
     height: 1.5rem;
     text-align: center;
     padding: 2px;
+}
+
+.dropdown-menu .label-container.region-list {
+    width: calc(270px);
+}
+
+.dropdown-menu .label-container.sort-by {
+    width: calc(270px);
 }
 
 /* #region - dropdown arrows */
@@ -1051,7 +1058,7 @@ input[type="radio"] {
     position: absolute;
     content: "";
     width: var(--size);
-    left: calc(270px - var(--size));
+    right: var(--size);
     border-left: var(--size) solid transparent;
     border-right: var(--size) solid transparent;
     pointer-events: none;
